
version 4.0
-- host UI blocking code in a different threads to remove/minimize UI freezes 
-- use only cryptsetup.so library to interface with cryptsetup
-- allow a user to select what random number generator to use  
-- add the ability to create key files
-- Font size and type are now configurable             
-- add support for favorite volumes	           		
-- warn in the UI on attempt to delete a key when there is only one key left 
-- refuse to attemp to add more keys when key slots are full.	
-- implement tray icon to minimize to tray 		
-- provide a complete docs in a header file on how to interface with libzuluCrypt.so
-- include partitions in /etc/crypttab in a list of system partitions. 	

version 4.1.0
-- minor update, fix bugs comming from mishandling of files and paths with empty spaces in them.

version 4.2.0
-- minor update, volume in the favorite list could not be mounted, this version fix it.

version 4.3.0
-- fix a bug. fat based volumes mounted with wrong permissions and only root user could write to the opened volume
-- volumw property now displays file system type, volume size, volume size used, volume size available and percentage used.
-- Fix a bug that prevented adding a new key from key file to a luks volume when the existing key was from a passphrase.
-- The password dialog had a bug and did not reset properly when the previous operation involved opening a keyfile.
-- Add an option to close all opened volumes with a single click.
-- Created volumes with extX file systems now use 1% reserved space instead of the default 5%.
-- Encrypted files can now be created using "/dev/random","/dev/urandom" or "/dev/zero"
-- Add a UI option to select a random number generator to use to all dialogs that deals with features that need it.
-- Add option to just minimize or minimize to tray the main window.
-- various other UI and functionality fixes.

version 5.0
translations support of people are interested in the tool in different languages.